# HireHub

./: backup.sql  db.db  pyproject.toml
hirehub/: Home.py
